--- a/App.kv
+++ b/App.kv
@@ -53,6 +53,7 @@
                     halign:"center"
                     color:0,0,0,1
                     font_size:48
+                    font_name:'3'
 
                 Image:
                     size_hint:(1,.7)
@@ -83,6 +84,7 @@
                         id:countdown_label
                         size_hint:(.5, 1)
                         font_size:48
+                        font_name:'3'
                         halign:'center'
                         padding_y:(self.height - self.line_height) / 2
                         color:0,0,0,1
@@ -92,16 +94,18 @@
                         id:countdown_verify
                         size_hint:(.4,1)
                         font_size:32
+                        font_name:'3'
                         text:""
                         color:0,0,0,1
                         background_color:254/255, 255/255, 217/255, 1
 
                     Button:
                         size_hint:(.1,1)
-                        font_size:24
+                        font_size:20
+                        font_name:'3'
                         text:"Reset"
-                        color:0,0,0,1
-                        background_color:255/255, 58/255, 58/255,1
+                        color:1,1,1,1
+                        background_color:116/255, 99/255, 63/255,1
                         background_normal:''
                         on_release:
                             root.reset_everything()
@@ -115,21 +119,24 @@
                         background_color:173/255,255/255,159/255,1
                         color:0,0,0,1
                         font_size:32
+                        font_name:'3'
                         text:"OK"
                     Button:
-                        background_color:173/255,255/255,159/255,1
+                        background_color:254/255, 255/255, 217/255, 1
                         background_normal:''
                         color:0,0,0,1
                         font_size:20
+                        font_name:'3'
                         size_hint:(.2,1)
                         text:"<"
                         on_release:
                             root.previous_btn()
                     Button:
-                        background_color:173/255,255/255,159/255,1
+                        background_color:254/255, 255/255, 217/255, 1
                         background_normal:''
                         color:0,0,0,1
                         font_size:20
+                        font_name:'3'
                         size_hint:(.2,1)
                         text:">"
                         on_release:
